updated name in index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head> 
-<title> I am an HTML Application </title>
+<title> I am Kashish's HTML Application </title>
 </head>
 <body>
-<h2> My Name is Inigo Montoya </h2>
+<h2> My Name is Kashish</h2>
 </body>
 </html>
